// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders the expected modal when the project can't be found 1`] = `
<DocumentFragment>
  <div
    class="embedded-viewer"
  >
    <div
      hidden=""
      id="file-content"
    />
    <div
      class="proj-runner-container"
    >
      <div
        class="pythonrunner-container"
      >
        <div
          class="react-tabs"
          data-rttabs="true"
        >
          <div
            class="react-tabs__tab-container"
          >
            <ul
              class="react-tabs__tab-list"
              role="tablist"
            >
              <li
                aria-controls="react-tabs-3"
                aria-disabled="false"
                aria-selected="true"
                class="react-tabs__tab react-tabs__tab--selected"
                data-rttab="true"
                id="react-tabs-2"
                role="tab"
                tabindex="0"
              >
                <span
                  class="react-tabs__tab-inner"
                >
                  output.textOutput
                </span>
              </li>
            </ul>
            <div
              class="output-view-toggle"
            >
              <div
                class="btn-outer"
              >
                <button
                  aria-label="outputViewToggle.buttonTabLabel"
                  class="btn btn--small output-view-toggle__button output-view-toggle__button--tabbed output-view-toggle__button--active btn--svg-only"
                  title="outputViewToggle.buttonTabTitle"
                >
                  <svg
                    fill="none"
                    height="24"
                    transform="scale(0.8, 0.8)"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2 8C2 7.20435 2.31607 6.44129 2.87868 5.87868C3.44129 5.31607 4.20435 5 5 5H19C19.7956 5 20.5587 5.31607 21.1213 5.87868C21.6839 6.44129 22 7.20435 22 8V16C22 16.7956 21.6839 17.5587 21.1213 18.1213C20.5587 18.6839 19.7956 19 19 19H5C4.20435 19 3.44129 18.6839 2.87868 18.1213C2.31607 17.5587 2 16.7956 2 16V8ZM13 7H19C19.2652 7 19.5196 7.10536 19.7071 7.29289C19.8946 7.48043 20 7.73478 20 8V16C20 16.2652 19.8946 16.5196 19.7071 16.7071C19.5196 16.8946 19.2652 17 19 17H13V7ZM11 7H5C4.73478 7 4.48043 7.10536 4.29289 7.29289C4.10536 7.48043 4 7.73478 4 8V16C4 16.2652 4.10536 16.5196 4.29289 16.7071C4.48043 16.8946 4.73478 17 5 17H11V7Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="btn-outer"
              >
                <button
                  aria-label="outputViewToggle.buttonSplitLabel"
                  class="btn btn--small output-view-toggle__button output-view-toggle__button--split btn--svg-only"
                  title="outputViewToggle.buttonSplitTitle"
                >
                  <svg
                    fill="none"
                    height="24"
                    transform="scale(0.8, 0.8)"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2.87868 5.87868C2.31607 6.44129 2 7.20435 2 8V16C2 16.7956 2.31607 17.5587 2.87868 18.1213C3.44129 18.6839 4.20435 19 5 19H19C19.7956 19 20.5587 18.6839 21.1213 18.1213C21.6839 17.5587 22 16.7956 22 16V8C22 7.20435 21.6839 6.44129 21.1213 5.87868C20.5587 5.31607 19.7956 5 19 5H5C4.20435 5 3.44129 5.31607 2.87868 5.87868ZM19 7H5C4.73478 7 4.48043 7.10536 4.29289 7.29289C4.10536 7.48043 4 7.73478 4 8V11H20V8C20 7.73478 19.8946 7.48043 19.7071 7.29289C19.5196 7.10536 19.2652 7 19 7ZM4 16V13H8L7.99999 12.9995H11V13H20V16C20 16.2652 19.8946 16.5196 19.7071 16.7071C19.5196 16.8946 19.2652 17 19 17H10V16.9995H8.00033L8 17H5C4.73478 17 4.48043 16.8946 4.29289 16.7071C4.10536 16.5196 4 16.2652 4 16Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="react-tabs-2"
            class="react-tabs__tab-panel react-tabs__tab-panel--selected"
            id="react-tabs-3"
            role="tabpanel"
          >
            <pre
              class="pythonrunner-console pythonrunner-console--small"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="embedded-viewer"
  >
    <div
      hidden=""
      id="file-content"
    />
    <div
      class="proj-runner-container"
    >
      <div
        class="pythonrunner-container"
      >
        <div
          class="react-tabs"
          data-rttabs="true"
        >
          <div
            class="react-tabs__tab-container"
          >
            <ul
              class="react-tabs__tab-list"
              role="tablist"
            >
              <li
                aria-controls="react-tabs-1"
                aria-disabled="false"
                aria-selected="true"
                class="react-tabs__tab react-tabs__tab--selected"
                data-rttab="true"
                id="react-tabs-0"
                role="tab"
                tabindex="0"
              >
                <span
                  class="react-tabs__tab-inner"
                >
                  output.textOutput
                </span>
              </li>
            </ul>
            <div
              class="output-view-toggle"
            >
              <div
                class="btn-outer"
              >
                <button
                  aria-label="outputViewToggle.buttonTabLabel"
                  class="btn btn--small output-view-toggle__button output-view-toggle__button--tabbed output-view-toggle__button--active btn--svg-only"
                  title="outputViewToggle.buttonTabTitle"
                >
                  <svg
                    fill="none"
                    height="24"
                    transform="scale(0.8, 0.8)"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2 8C2 7.20435 2.31607 6.44129 2.87868 5.87868C3.44129 5.31607 4.20435 5 5 5H19C19.7956 5 20.5587 5.31607 21.1213 5.87868C21.6839 6.44129 22 7.20435 22 8V16C22 16.7956 21.6839 17.5587 21.1213 18.1213C20.5587 18.6839 19.7956 19 19 19H5C4.20435 19 3.44129 18.6839 2.87868 18.1213C2.31607 17.5587 2 16.7956 2 16V8ZM13 7H19C19.2652 7 19.5196 7.10536 19.7071 7.29289C19.8946 7.48043 20 7.73478 20 8V16C20 16.2652 19.8946 16.5196 19.7071 16.7071C19.5196 16.8946 19.2652 17 19 17H13V7ZM11 7H5C4.73478 7 4.48043 7.10536 4.29289 7.29289C4.10536 7.48043 4 7.73478 4 8V16C4 16.2652 4.10536 16.5196 4.29289 16.7071C4.48043 16.8946 4.73478 17 5 17H11V7Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="btn-outer"
              >
                <button
                  aria-label="outputViewToggle.buttonSplitLabel"
                  class="btn btn--small output-view-toggle__button output-view-toggle__button--split btn--svg-only"
                  title="outputViewToggle.buttonSplitTitle"
                >
                  <svg
                    fill="none"
                    height="24"
                    transform="scale(0.8, 0.8)"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M2.87868 5.87868C2.31607 6.44129 2 7.20435 2 8V16C2 16.7956 2.31607 17.5587 2.87868 18.1213C3.44129 18.6839 4.20435 19 5 19H19C19.7956 19 20.5587 18.6839 21.1213 18.1213C21.6839 17.5587 22 16.7956 22 16V8C22 7.20435 21.6839 6.44129 21.1213 5.87868C20.5587 5.31607 19.7956 5 19 5H5C4.20435 5 3.44129 5.31607 2.87868 5.87868ZM19 7H5C4.73478 7 4.48043 7.10536 4.29289 7.29289C4.10536 7.48043 4 7.73478 4 8V11H20V8C20 7.73478 19.8946 7.48043 19.7071 7.29289C19.5196 7.10536 19.2652 7 19 7ZM4 16V13H8L7.99999 12.9995H11V13H20V16C20 16.2652 19.8946 16.5196 19.7071 16.7071C19.5196 16.8946 19.2652 17 19 17H10V16.9995H8.00033L8 17H5C4.73478 17 4.48043 16.8946 4.29289 16.7071C4.10536 16.5196 4 16.2652 4 16Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="react-tabs-0"
            class="react-tabs__tab-panel react-tabs__tab-panel--selected"
            id="react-tabs-1"
            role="tabpanel"
          >
            <pre
              class="pythonrunner-console pythonrunner-console--small"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
